fix navbar scale especially on mobile

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -52,7 +52,7 @@ nav ul {
 
 @media (max-width: 800px) {
     .navbar-link-active, .navbar-link-inactive {
-        padding: 1em 2em;
+        padding: 0.5em 1em;
     }
 
     .navlink-text {
